Fix image overflow issue.

--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ section.light-mode:hover {
     float: right;
     border-left: rgba(0, 0, 0, 0.3) solid 3px;
     padding-left: 20px;
+    overflow-x: hidden;
 }
 #all-projects, #all-blogs {
     background-color: rgba(0, 0, 0, 0.1);
@@ -209,7 +210,7 @@ section.light-mode:hover {
     background-color: rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
-@media screen and (max-width: 1270px){
+@media screen and (max-width: 1380px){
     .project-description, .blog-description {
         float: none;
         width: 100%;
@@ -219,6 +220,7 @@ section.light-mode:hover {
         float: none;
         border-left: none;
         padding-left: 0;
+        margin: auto;
     }
 }
 
